--- a/all/projects/greencloud/Makefile
+++ b/all/projects/greencloud/Makefile
@@ -1,17 +1,24 @@
 
+NAME := greencloud.0.1
+
 SRC_DIR = src
 OBJ_DIR = obj
 HED_DIR = include
 LIB_DIR = lib
+RELEASE_DIR = release
 TEST_DIR = test
 
-VPATH = $(TEST_DIR):$(OBJ_DIR):$(SRC_DIR)
+VPATH = $(TEST_DIR):$(OBJ_DIR):$(SRC_DIR):$(RELEASE_DIR)
+
 
 SRC := $(wildcard $(SRC_DIR)/*.cpp)
-EXE := ver.0.1.out
+EXE := $(NAME).out
+NAME_SRC := $(NAME).cpp
 OBJ := $(notdir $(SRC:.cpp=.o))
 LIB := $(LIB_DIR)/lib.a
 OBJS :=$(addprefix $(OBJ_DIR)/,$(OBJ))
+TESTS := $(wildcard $(TEST_DIR)/*.cpp)
+TESTS_OUT := $(TESTS:.cpp=.out)
 
 CC = g++
 CFLAGS = -c -std=c++11 -pedantic-errors -Wall -Wextra -g
@@ -23,15 +30,19 @@ LFLAGS = -std=c++11 -pedantic-errors -Wall -Wextra -g -pthread
 
 all:$(EXE)
 
-%.o: %.cpp
+%.o: %.cpp %.hpp
 	$(CC) $(CFLAGS) $^ -I $(HED_DIR)
 	mv *.o $(OBJ_DIR)
 
 #$(LIB): $(OBJ)
 #	ar rc $@ $(addprefix $(OBJ_DIR)/,$(OBJ))
 
-$(EXE): ver.0.1.cpp $(OBJ)
+$(EXE): $(NAME_SRC) $(OBJ)
 	$(CC) $(LFLAGS) $< $(OBJS) -o $@ -I $(HED_DIR)
+
+singleton:
+	$(CC) $(LFLAGS) ./test/singleton_test.cpp -o $@.out -ldl -I $(HED_DIR)
+
 
 clean:
 	rm *.out
